--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   },
   "dependencies": {
     "better-sqlite3": "^7.4.5",
-    "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^12.0.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7"
+    "eslint": "^8.5.0",
+    "eslint-config-next": "^12.0.7"
   }
 }
